--- a/.github/workflows/publish_release.yml
+++ b/.github/workflows/publish_release.yml
@@ -52,12 +52,12 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install poetry
-          poetry env use python${{ matrix.python-version }}
+          poetry env use python${{ matrix.python-version }} -vvv
           cd lightrag
-          poetry install --no-dev
+          poetry install --no-dev -vvv
       - name: Build the distribution
         run: |
-          poetry build
+          poetry build -vvv
       - name: Upload distribution for publishing
         uses: actions/upload-artifact@v2
         with:
