--- a/.github/workflows/publish_release.yml
+++ b/.github/workflows/publish_release.yml
@@ -52,8 +52,10 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install poetry
-          poetry env use python${{ matrix.python-version }} -vvv
+      - name: Setup and install dependencies
+        run: |
           cd lightrag
+          poetry env use python${{ matrix.python-version }} -vvv
           poetry install --no-dev -vvv
       - name: Build the distribution
         run: |
@@ -63,6 +65,7 @@ jobs:
         with:
           name: dist
           path: dist/**
+
 
   dry-run-publish:
     needs: build-and-package
