--- a/.github/workflows/publish_release.yml
+++ b/.github/workflows/publish_release.yml
@@ -48,11 +48,12 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Install Poetry and dependencies
+      - name: Install Poetry
         run: |
           python -m pip install --upgrade pip
           pip install poetry
-          poetry env use python${{ matrix.python-version }}
+      - name: Change to the lightrag directory and install dependencies
+        run: |
           cd lightrag
           poetry install --no-dev
       - name: Build the distribution
@@ -63,7 +64,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: dist
-          path: lightrag/dist/**
+          path: lightrag/dist/
 
 
   dry-run-publish:
