--- a/lightrag/pyproject.toml
+++ b/lightrag/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "lightrag"
 
-version = "0.0.0-beta.1+20230721"  # test identifier
+version = "0.0.0-alpha.17"  # test identifier
 description = "The Lightning Library for LLM Applications."
 authors = ["Li Yin <li@sylphai.com>"]
 readme = "README.md"
