--- a/lightrag/pyproject.toml
+++ b/lightrag/pyproject.toml
@@ -53,6 +53,7 @@ torch = { version = "^2.3.1", optional = true }
 anthropic = { version = "^0.31.1", optional = true }
 google-generativeai = { version = "^0.7.2", optional = true }
 cohere = { version = "^5.5.8", optional = true }
+ollama = { version = "^0.2.1", optional = true }
 
 
 [tool.poetry.group.test.dependencies]
@@ -83,6 +84,7 @@ pgvector = ["pgvector"]
 faiss-cpu = ["faiss-cpu"]
 sqlalchemy = ["sqlalchemy"]
 torch = ["torch"]
+ollama = ["ollama"]
 
 
 [tool.ruff]
