add from_dict, to_dict, add emedder examples

--- a/.env_example
+++ b/.env_example
@@ -4,3 +4,4 @@ ANTHROPIC_API_KEY=YOUR_API_KEY_IF_YOU_USE_ANTHROPIC
 GOOGLE_API_KEY=YOUR_API_KEY_IF_YOU_USE_GOOGLE
 COHERE_API_KEY=YOUR_API_KEY_IF_YOU_USE_COHERE
 HF_TOKEN=YOUR_API_KEY_IF_YOU_USE_HF
+OLLAMA_HOST=http://localhost:11434
