--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ packages = [{ from = "_lightrag", include = "lightrag" }]          # empty packa
 [tool.poetry.dependencies]
 python = ">=3.11, <4.0"
 lightrag = { path = "lightrag", develop = true }
-torch = "^2.3.1"
+# torch = "^2.3.1"
 openai = "^1.34.0"
 # lightrag = {path = "lightrag/dist/lightrag-0.0.0a11-py3-none-any.whl"}
 # lightrag = "^0.0.0a13"
@@ -31,6 +31,7 @@ pydot = "^2.0.0"
 matplotlib = "^3.9.0"
 pyvis = "^0.3.2"
 ollama = "^0.2.1"
+torch = ">=2.0, <3.0"
 
 
 [tool.poetry.group.doc.dependencies]
