--- a/lightrag/pyproject.toml
+++ b/lightrag/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "lightrag"
 
-version = "0.1.0-beta.2"
+version = "0.1.0-beta.4"
 description = "The Lightning Library for LLM Applications."
 authors = ["Li Yin <li@sylphai.com>"]
 readme = "README.md"
@@ -86,6 +86,16 @@ faiss-cpu = ["faiss-cpu"]
 sqlalchemy = ["sqlalchemy"]
 torch = ["torch"]
 ollama = ["ollama"]
+
+
+# [[tool.poetry.source]]
+# name = "pypi"
+# url = "https://pypi.org/simple"
+# default = true
+[[tool.poetry.source]]
+name = "nvidia-pypi"
+priority = "supplemental"
+url = "https://pypi.nvidia.com"
 
 
 [tool.ruff]
