--- a/lightrag/pyproject.toml
+++ b/lightrag/pyproject.toml
@@ -42,6 +42,8 @@ tiktoken = "^0.7.0"
 numpy = "^1.26.4"
 tqdm = "^4.66.4"
 pyyaml = "^6.0.1"
+nest-asyncio = "^1.6.0"
+
 
 # Optional dependencies
 openai = { version = "^1.12.0", optional = true }
@@ -96,7 +98,10 @@ ollama = ["ollama"]
 name = "nvidia-pypi"
 priority = "supplemental"
 url = "https://pypi.nvidia.com"
-
+# [[tool.poetry.source]]
+# name = "nvidia-pypi"
+# priority = "supplemental"
+# url = "https://pypi.nvidia.com"
 
 [tool.ruff]
 exclude = ["images"]
