--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,10 @@ lightrag = { path = "lightrag", develop = true }
 openai = "^1.34.0"
 # lightrag = {path = "lightrag/dist/lightrag-0.0.0a11-py3-none-any.whl"}
 # lightrag = "^0.0.0a13"
+pytest = "^8.3.1"
+pytest-mock = "^3.14.0"
+mock = "^5.1.0"
+litellm = "^1.41.25"
 
 
 [tool.poetry.group.dev.dependencies]
