test the deployment

--- a/.github/workflows/documentation_test.yml
+++ b/.github/workflows/documentation_test.yml
@@ -32,13 +32,14 @@ jobs:
       - name: Install documentation dependencies using Poetry
         run: |
           cd docs
-          poetry install --with doc  # Install all dependencies including those from the main project
+          poetry config virtualenvs.create false  # Avoid creating a virtual environment
+          poetry install   # Install only the doc dependencies as specified in pyproject.toml
 
       - name: Build documentation using Makefile
         run: |
           echo "Building documentation from: $(pwd)"
           ls -l  # Debug: List current directory contents
-          poetry run make html SPHINXOPTS=-v  # Run Makefile in docs directory to build HTML docs with verbose output
+          poetry run make html  # Run Makefile in docs directory to build HTML docs
         working-directory: ${{ github.workspace }}/docs
 
       - name: List built documentation
