test the deployment

--- a/.github/workflows/documentation_test.yml
+++ b/.github/workflows/documentation_test.yml
@@ -33,8 +33,9 @@ jobs:
         run: |
           cd docs
           poetry config virtualenvs.create false  # Avoid creating a virtual environment
-          poetry install   # Install only the doc dependencies as specified in pyproject.toml
-          pip install nest-asyncio
+          poetry install --with doc  # Install only the doc dependencies as specified in pyproject.toml
+          # pip install nest-asyncio
+          poetry show
 
       - name: Build documentation using Makefile
         run: |
