test the deployment

--- a/.github/workflows/documentation_test.yml
+++ b/.github/workflows/documentation_test.yml
@@ -34,7 +34,8 @@ jobs:
           cd docs
           poetry config virtualenvs.create false  # Avoid creating a virtual environment
           poetry install --with doc  # Install only the doc dependencies as specified in pyproject.toml
-          # pip install nest-asyncio
+          pip install nest-asyncio # manually install nest-asyncio
+          # pip install transformers  # manually install transformers
           poetry show
           poetry show lightrag
 
