--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -29,17 +29,17 @@ jobs:
           curl -sSL https://install.python-poetry.org | python3 -
           echo "$HOME/.local/bin" >> $GITHUB_PATH  # Ensure Poetry's bin directory is in PATH
 
-      - name: Install package dependencies using Poetry
-        run: |
-          cd lightrag
-          poetry config virtualenvs.create false  # Avoid creating a virtual environment
-          poetry install --all-extras --verbose  # Install all optional dependencies
-          cd ..  # Change back to the root directory
-
       - name: Install documentation dependencies using Poetry
         run: |
+          cd docs
           poetry config virtualenvs.create false  # Avoid creating a virtual environment
-          poetry install --only doc  # Install only the doc dependencies as specified in pyproject.toml
+          poetry install --with doc  # Install dependencies as specified in pyproject.toml
+          pip install nest-asyncio # manually install nest-asyncio
+          pip install torch # manually install torch
+          # pip install transformers  # manually install transformers
+          poetry show
+          poetry show lightrag
+
 
       - name: Build documentation using Makefile
         run: |
