--- a/lightrag/pyproject.toml
+++ b/lightrag/pyproject.toml
@@ -61,6 +61,7 @@ ollama = { version = "^0.2.1", optional = true }
 [tool.poetry.group.test.dependencies]
 pytest = "^8.1.1"
 pytest-mock = "^3.14.0"
+pytest-asyncio = "^0.23.8"
 torch = "^2.3.1"
 ollama = "^0.2.1"
 faiss-cpu = "^1.8.0"
