--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
-OPENAI_API_KEY=
-GROQ_API_KEY=
-ANTHROPIC_API_KEY=
-GOOGLE_API_KEY=
-TOGETHERAI_API_KEY=
-HUGGINGFACE_API_KEY=
+OPENAI_API_KEY=YOUR_API_KEY_IF_YOU_USE_OPENAI
+GROQ_API_KEY=YOUR_API_KEY_IF_YOU_USE_GROQ
+ANTHROPIC_API_KEY=YOUR_API_KEY_IF_YOU_USE_ANTHROPIC
+GOOGLE_API_KEY=YOUR_API_KEY_IF_YOU_USE_GOOGLE
+TOGETHERAI_API_KEY=YOUR_API_KEY_IF_YOU_USE_TOGETHERAI
+HUGGINGFACE_API_KEY=YOUR_API_KEY_IF_HUGGING
 OLLAMA_HOST=http://localhost:11434
