--- a/lightrag/pyproject.toml
+++ b/lightrag/pyproject.toml
@@ -43,6 +43,7 @@ numpy = "^1.26.4"
 tqdm = "^4.66.4"
 pyyaml = "^6.0.1"
 nest-asyncio = "^1.6.0"
+botocore = "^1.34.149"   # if not specified, it will fail to resolve the dependency
 
 
 # Optional dependencies
@@ -76,6 +77,9 @@ types-tqdm = "^4.66.0.20240417"
 [tool.poetry.group.dev.dependencies] # specify the versions for extras
 pre-commit = "^3.7.0"
 graphviz = "^0.20.3"
+tensorboard = "^2.17.0"
+tensorboardx = "^2.6.2.2"
+matplotlib = "^3.9.1"
 
 
 [tool.poetry.extras] # allow pip install lightrag[openai, groq]
