--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,8 @@ pyvis = "^0.3.2"
 ollama = "^0.2.1"
 torch = ">=2.0, <3.0"
 textgrad = "^0.1.4"
+tensorboardx = "^2.6.2.2"
+tensorboard = "^2.17.0"
 
 
 [tool.poetry.group.doc.dependencies]
