--- a/lightrag/pyproject.toml
+++ b/lightrag/pyproject.toml
@@ -80,6 +80,7 @@ graphviz = "^0.20.3"
 tensorboard = "^2.17.0"
 tensorboardx = "^2.6.2.2"
 matplotlib = "^3.9.1"
+diskcache = "^5.6.3"
 
 
 [tool.poetry.extras] # allow pip install lightrag[openai, groq]
