--- a/lightrag/pyproject.toml
+++ b/lightrag/pyproject.toml
@@ -48,7 +48,7 @@ botocore = "^1.34.149"   # if not specified, it will fail to resolve the depende
 
 # Optional dependencies
 openai = { version = "^1.12.0", optional = true }
-groq = { version = "^0.5.0", optional = true }
+groq = { version = "^0.9.0", optional = true }
 faiss-cpu = { version = "^1.8.0", optional = true }
 sqlalchemy = { version = "^2.0.30", optional = true }
 pgvector = { version = "^0.3.1", optional = true }
@@ -66,6 +66,9 @@ torch = "^2.3.1"
 ollama = "^0.2.1"
 faiss-cpu = "^1.8.0"
 openai = "^1.12.0"
+groq = "^0.9.0"
+google-generativeai = "^0.7.2"
+anthropic = "^0.31.1"
 
 
 [tool.poetry.group.typing.dependencies]
