--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,22 +1,21 @@
 
 [tool.poetry]
-name = "lightrag-project"
+name = "adalflow project"
 version = "0.1.0"
-description = "A project to develop and test the lightrag library"
+description = "A project to develop and test the adalflow library"
 authors = ["Your Name <your.email@example.com>"]
 license = "MIT"
 
-# include = ["use_cases/*", "tutorials/*"]
 packages = [
-    # { from = "_lightrag", include = "lightrag" },
     { from = ".", include = "use_cases" },
     { from = ".", include = "tutorials" },
+    { from = ".", include = "benchmarks" },
 ]
 
 
 [tool.poetry.dependencies]
 python = ">=3.11, <4.0"
-lightrag = { path = "lightrag", develop = true }
+adalflow = { path = "lightrag", develop = true }
 # torch = "^2.3.1"
 openai = "^1.34.0"
 # lightrag = {path = "lightrag/dist/lightrag-0.0.0a11-py3-none-any.whl"}
@@ -42,21 +41,22 @@ torch = ">=2.0, <3.0"
 textgrad = "^0.1.4"
 tensorboardx = "^2.6.2.2"
 tensorboard = "^2.17.0"
+dspy-ai = "^2.4.13"
 
 
-[tool.poetry.group.doc.dependencies]
-pydata-sphinx-theme = "^0.15.3"
-sphinx-design = "^0.6.0"
-sphinx-copybutton = "^0.5.2"
-sphinx = "^7.3.7"
-nbsphinx = "^0.9.4"
-nbconvert = "^7.16.4"
-pandoc = "^2.3"
-readthedocs-sphinx-search = "^0.3.2"
-sqlalchemy = "^2.0.31"
-google-generativeai = "^0.7.1"
-faiss-cpu = "^1.8.0.post1"
-lightrag = { path = "lightrag", develop = true }
+# [tool.poetry.group.doc.dependencies]
+# pydata-sphinx-theme = "^0.15.3"
+# sphinx-design = "^0.6.0"
+# sphinx-copybutton = "^0.5.2"
+# sphinx = "^7.3.7"
+# nbsphinx = "^0.9.4"
+# nbconvert = "^7.16.4"
+# pandoc = "^2.3"
+# readthedocs-sphinx-search = "^0.3.2"
+# sqlalchemy = "^2.0.31"
+# google-generativeai = "^0.7.1"
+# faiss-cpu = "^1.8.0.post1"
+# lightrag = { path = "lightrag", develop = true }
 
 
 [build-system]
