--- a/docs/pyproject.toml
+++ b/docs/pyproject.toml
@@ -30,6 +30,7 @@ groq = "^0.9.0"
 pgvector = "^0.3.0"
 faiss-cpu = "^1.8.0.post1"
 ollama = "^0.3.0"
+qdrant-client = "^1.10.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
