--- a/lightrag/pyproject.toml
+++ b/lightrag/pyproject.toml
@@ -56,6 +56,7 @@ anthropic = { version = "^0.31.1", optional = true }
 google-generativeai = { version = "^0.7.2", optional = true }
 cohere = { version = "^5.5.8", optional = true }
 ollama = { version = "^0.2.1", optional = true }
+qdrant-client = { version = "^1.10.1", optional = true }
 
 
 [tool.poetry.group.test.dependencies]
@@ -88,6 +89,7 @@ faiss-cpu = ["faiss-cpu"]
 sqlalchemy = ["sqlalchemy"]
 torch = ["torch"]
 ollama = ["ollama"]
+qdrant = ["qdrant-client"]
 
 
 # [[tool.poetry.source]]
