rag_with multiple generator to be able to train, made retriever a gradfunction, make gradfunction a subclass of component with different definition on __call__, when training use forward and when inference, use call. and forward will wrap call into a parameter, adapt any ops as a trainable operator, such as generator and retriever

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ packages = [
     { from = ".", include = "benchmarks" },
 ]
 
+# if you cant import package, use export PYTHONPATH=$(pwd):$PYTHONPATH
 
 [tool.poetry.dependencies]
 python = ">=3.11, <4.0"
