--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 
 [tool.poetry]
-name = "adalflow project"
+name = "adalflow-project"
 version = "0.1.0"
 description = "A project to develop and test the adalflow library"
 authors = ["Your Name <your.email@example.com>"]
@@ -16,7 +16,7 @@ packages = [
 
 [tool.poetry.dependencies]
 python = ">=3.11, <4.0"
-adalflow = { path = "lightrag", develop = true }
+adalflow = { path = "adalflow", develop = true }
 # torch = "^2.3.1"
 openai = "^1.34.0"
 # lightrag = {path = "lightrag/dist/lightrag-0.0.0a11-py3-none-any.whl"}
