--- a/adalflow/pyproject.toml
+++ b/adalflow/pyproject.toml
@@ -1,8 +1,8 @@
 [tool.poetry]
 name = "adalflow"
 
-version = "0.2.0.beta.2"
-description = "The Library for LLM Applications."
+version = "0.2.0.beta.3"
+description = "The Library to Build and Auto-optimize Any LLM Task Pipeline"
 authors = ["Li Yin <li@sylphai.com>"]
 readme = "README.md"
 repository = "https://github.com/SylphAI-Inc/LightRAG"
@@ -57,6 +57,7 @@ anthropic = { version = "^0.31.1", optional = true }
 google-generativeai = { version = "^0.7.2", optional = true }
 cohere = { version = "^5.5.8", optional = true }
 ollama = { version = "^0.2.1", optional = true }
+diskcache = "^5.6.3"
 
 
 [tool.poetry.group.test.dependencies]
