fix the import in FAISS retriever

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,6 +60,7 @@ dspy-ai = "^2.4.13"
 # lightrag = { path = "lightrag", develop = true }
 transformers = "^4.44.0"
 accelerate = "^0.33.0"
+faiss-cpu = "^1.8.0.post1"
 
 
 [build-system]
