--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,6 +61,7 @@ dspy-ai = "^2.4.13"
 transformers = "^4.44.0"
 accelerate = "^0.33.0"
 faiss-cpu = "^1.8.0.post1"
+nltk = "^3.9.1"
 
 
 [build-system]
