--- a/pyproject.toml
+++ b/pyproject.toml
@@ -62,6 +62,7 @@ transformers = "^4.44.0"
 accelerate = "^0.33.0"
 faiss-cpu = "^1.8.0.post1"
 nltk = "^3.9.1"
+deepeval = "^1.1.6"
 
 
 [build-system]
