--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,4 +1,3 @@
-
 [tool.poetry]
 name = "adalflow-project"
 version = "0.1.0"
@@ -17,14 +16,9 @@ packages = [
 [tool.poetry.dependencies]
 python = ">=3.11, <4.0"
 adalflow = { path = "adalflow", develop = true }
-# torch = "^2.3.1"
 openai = "^1.34.0"
-# lightrag = {path = "lightrag/dist/lightrag-0.0.0a11-py3-none-any.whl"}
-# lightrag = "^0.0.0a13"
-
 
 [tool.poetry.group.dev.dependencies]
-
 pre-commit = "^3.7.0"
 anthropic = "^0.26.0"
 torchmetrics = "^1.4.0.post0"
@@ -43,7 +37,12 @@ textgrad = "^0.1.4"
 tensorboardx = "^2.6.2.2"
 tensorboard = "^2.17.0"
 dspy-ai = "^2.4.13"
+transformers = "^4.44.0"
+accelerate = "^0.33.0"
 
+[tool.poetry.group.azure.dependencies]
+azure-storage-blob = "^12.14.0"
+azure-identity = "^1.12.0"
 
 # [tool.poetry.group.doc.dependencies]
 # pydata-sphinx-theme = "^0.15.3"
@@ -58,9 +57,6 @@ dspy-ai = "^2.4.13"
 # google-generativeai = "^0.7.1"
 # faiss-cpu = "^1.8.0.post1"
 # lightrag = { path = "lightrag", develop = true }
-transformers = "^4.44.0"
-accelerate = "^0.33.0"
-
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
