--- a/adalflow/pyproject.toml
+++ b/adalflow/pyproject.toml
@@ -1,12 +1,10 @@
 [tool.poetry]
 name = "adalflow"
-
 version = "0.2.0"
 description = "The Library to Build and Auto-optimize Any LLM Task Pipeline"
 authors = ["Li Yin <li@sylphai.com>"]
 readme = "README.md"
 repository = "https://github.com/SylphAI-Inc/LightRAG"
-
 license = "MIT"
 maintainers = ["Li Yin <li@sylphai.com>"]
 classifiers = [
@@ -27,9 +25,7 @@ include = [
     "adalflow/optim/*",
 ]
 
-
 packages = [{ include = "adalflow", from = "." }]
-
 
 [tool.poetry.dependencies]
 python = ">=3.9, <4.0"
@@ -43,8 +39,7 @@ numpy = "^1.26.4"
 tqdm = "^4.66.4"
 pyyaml = "^6.0.1"
 nest-asyncio = "^1.6.0"
-botocore = "^1.34.149"   # if not specified, it will fail to resolve the dependency
-
+botocore = "^1.34.149"
 
 # Optional dependencies
 openai = { version = "^1.12.0", optional = true }
@@ -59,6 +54,11 @@ cohere = { version = "^5.5.8", optional = true }
 ollama = { version = "^0.2.1", optional = true }
 diskcache = "^5.6.3"
 
+# Azure dependencies
+azure-core = { version = "^1.24.0", optional = true }
+azure-identity = { version = "^1.12.0", optional = true }
+azure-ai-formrecognizer = { version = "^3.2.0", optional = true }
+azure-ai-textanalytics = { version = "^5.3.0", optional = true }
 
 [tool.poetry.group.test.dependencies]
 pytest = "^8.1.1"
@@ -71,14 +71,12 @@ groq = "^0.9.0"
 google-generativeai = "^0.7.2"
 anthropic = "^0.31.1"
 
-
 [tool.poetry.group.typing.dependencies]
 mypy = "^1"
 types-pyyaml = "^6.0.12.20240311" # for mypy
 types-tqdm = "^4.66.0.20240417"
 
-
-[tool.poetry.group.dev.dependencies] # specify the versions for extras
+[tool.poetry.group.dev.dependencies]
 pre-commit = "^3.7.0"
 graphviz = "^0.20.3"
 tensorboard = "^2.17.0"
@@ -86,8 +84,7 @@ tensorboardx = "^2.6.2.2"
 matplotlib = "^3.9.1"
 diskcache = "^5.6.3"
 
-
-[tool.poetry.extras] # allow pip install adalflow[openai, groq]
+[tool.poetry.extras]
 openai = ["openai"]
 groq = ["groq"]
 anthropic = ["anthropic"]
@@ -98,24 +95,20 @@ faiss-cpu = ["faiss-cpu"]
 sqlalchemy = ["sqlalchemy"]
 torch = ["torch"]
 ollama = ["ollama"]
+azure = [
+    "azure-core",
+    "azure-identity",
+    "azure-ai-formrecognizer",
+    "azure-ai-textanalytics"
+]
 
-
-# [[tool.poetry.source]]
-# name = "pypi"
-# url = "https://pypi.org/simple"
-# default = true
 [[tool.poetry.source]]
 name = "nvidia-pypi"
 priority = "supplemental"
 url = "https://pypi.nvidia.com"
-# [[tool.poetry.source]]
-# name = "nvidia-pypi"
-# priority = "supplemental"
-# url = "https://pypi.nvidia.com"
 
 [tool.ruff]
 exclude = ["images"]
-
 
 [build-system]
 requires = ["poetry-core"]
