--- a/adalflow/pyproject.toml
+++ b/adalflow/pyproject.toml
@@ -58,12 +58,11 @@ anthropic = { version = "^0.31.1", optional = true }
 google-generativeai = { version = "^0.7.2", optional = true }
 cohere = { version = "^5.5.8", optional = true }
 ollama = { version = "^0.2.1", optional = true }
-
+boto3 = { version = "^1.35.19", optional = true }
 
 [tool.poetry.group.test.dependencies]
 pytest = "^8.1.1"
 pytest-mock = "^3.14.0"
-torch = "^2.3.1"
 ollama = "^0.2.1"
 faiss-cpu = "^1.8.0"
 openai = "^1.12.0"
