--- a/adalflow/pyproject.toml
+++ b/adalflow/pyproject.toml
@@ -63,6 +63,7 @@ boto3 = { version = "^1.35.19", optional = true }
 [tool.poetry.group.test.dependencies]
 pytest = "^8.1.1"
 pytest-mock = "^3.14.0"
+torch = "^2.3.1"
 ollama = "^0.2.1"
 faiss-cpu = "^1.8.0"
 openai = "^1.12.0"
