--- a/adalflow/pyproject.toml
+++ b/adalflow/pyproject.toml
@@ -42,7 +42,7 @@ tqdm = "^4.66.4"
 pyyaml = "^6.0.1"
 nest-asyncio = "^1.6.0"
 colorama = "^0.4.6"
-botocore = "^1.34.149" # if not specified, it will fail to resolve the dependency, we need to figure out a way to get rid of botocore dependency
+botocore = "^1.34.149"   # if not specified, it will fail to resolve the dependency, we need to figure out a way to get rid of botocore dependency
 diskcache = "^5.6.3"
 
 
@@ -62,8 +62,10 @@ ollama = { version = "^0.2.1", optional = true }
 # Azure dependencies
 azure-core = { version = "^1.24.0", optional = true }
 azure-identity = { version = "^1.12.0", optional = true }
-azure-ai-formrecognizer = { version = "^3.2.0", optional = true }
-azure-ai-textanalytics = { version = "^5.3.0", optional = true }
+# azure-ai-formrecognizer = { version = "^3.2.0", optional = true }
+# azure-ai-textanalytics = { version = "^5.3.0", optional = true }
+
+# amazon bedrock
 boto3 = { version = "^1.35.19", optional = true }
 
 [tool.poetry.group.test.dependencies]
@@ -88,7 +90,8 @@ graphviz = "^0.20.3"
 tensorboard = "^2.17.0"
 tensorboardx = "^2.6.2.2"
 matplotlib = "^3.9.1"
-
+azure-identity = "^1.18.0"
+azure-core = "^1.31.0"
 
 
 [tool.poetry.group.extra.dependencies]
@@ -108,10 +111,11 @@ ollama = ["ollama"]
 azure = [
     "azure-core",
     "azure-identity",
-    "azure-ai-formrecognizer",
-    "azure-ai-textanalytics"
+    # "azure-ai-formrecognizer",
+    # "azure-ai-textanalytics", # will reevaluate the need for these two
 ]
 
+bedrock = ["boto3"]
 datasets = ["datasets"]
 
 [[tool.poetry.source]]
