--- a/docs/pyproject.toml
+++ b/docs/pyproject.toml
@@ -10,6 +10,7 @@ packages = [{ from = "_dummy", include = "dummy" }]    # empty packages
 python = ">=3.9, <4.0"
 adalflow = { path = "../adalflow", develop = true } # document always follow the latest version of the library
 
+
 [tool.poetry.group.doc.dependencies]
 pydata-sphinx-theme = "^0.15.3"
 sphinx-design = "^0.6.0"
@@ -20,6 +21,7 @@ nbconvert = "^7.16.4"
 pandoc = "^2.3"
 readthedocs-sphinx-search = "^0.3.2"
 # add optional packages to compile the documents correctly
+datasets = "^2.20.0"
 sqlalchemy = "^2.0.31"
 google-generativeai = "^0.7.1"
 anthropic = "^0.30.1"
@@ -32,8 +34,11 @@ faiss-cpu = "^1.8.0.post1"
 ollama = "^0.3.0"
 qdrant-client = "^1.10.1"
 diskcache = "^5.6.3"
-datasets = "^2.20.0"
 torch = "^2.4.0"
+
+# azure model_client
+azure-identity = "^1.18.0"
+azure-core = "^1.31.0"
 
 
 [build-system]
