--- a/.github/ISSUE_TEMPLATE/5_suggest_integration.yaml
+++ b/.github/ISSUE_TEMPLATE/5_suggest_integration.yaml
@@ -1,15 +1,14 @@
 name: Feature request
-description: Propose a feature for this project
+description: Propose a new integration for this project, either db, retriever, model_client. We highly recommend you to find a POC from the provider team to work together on this.
 labels: ['needs triage', 'feature']
 body:
   - type: textarea
     attributes:
       label: Description & Motivation
-      description: A clear and concise description of the feature proposal
+      description: A clear and concise description of the integration proposal
       placeholder: |
         Please outline the motivation for the proposal.
-        Is your feature request related to a problem? e.g., I'm always frustrated when [...].
-        If this is related to another GitHub issue, please link it here
+
 
   - type: textarea
     attributes:
@@ -20,26 +19,14 @@ body:
 
   - type: textarea
     attributes:
-      label: Alternatives
-      description: A clear and concise description of any alternative solutions or features you've considered, if any.
+      label: Provider POC
+      description: If you have a POC from the provider team, please provide it here.
     validations:
       required: false
 
   - type: textarea
     attributes:
       label: Additional context
-      description: Add any other context or screenshots about the feature request here.
+      description: Add any other context or screenshots about the integration request here.
     validations:
       required: false
-
-  - type: markdown
-    attributes:
-      value: >
-        ### If you enjoy Lightning, check out our other projects! ⚡
-
-        - [**Metrics**](https://github.com/Lightning-AI/metrics):
-          Machine learning metrics for distributed, scalable PyTorch applications.
-          enables pure PyTorch users to scale their existing code on any kind of device while retaining full control over their own loops and optimization logic.
-        - [**GPT**](https://github.com/Lightning-AI/lit-GPT):
-          Hackable implementation of state-of-the-art open-source LLMs based on nanoGPT.
-          Supports flash attention, 4-bit and 8-bit quantization, LoRA and LLaMA-Adapter fine-tuning, pre-training. Apache 2.0-licensed.
