fix the issue lables and add use cases template

--- a/.github/ISSUE_TEMPLATE/1_bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/1_bug_report.yaml
@@ -1,6 +1,6 @@
 name: Report a bug
 description: Any errors that you encounter.
-labels: ['needs triage', 'bug']
+labels: ['bug']
 body:
   - type: markdown
     attributes:
