--- a/.github/ISSUE_TEMPLATE/5_suggest_integration.yaml
+++ b/.github/ISSUE_TEMPLATE/5_suggest_integration.yaml
@@ -1,6 +1,6 @@
 name: New integration proposal
 description: Propose a new integration for this project, either db, retriever, model_client. We highly recommend you to find a POC from the provider team to work together on this.
-labels: ['needs triage', 'feature']
+labels: ['[adalflow] integration']
 body:
   - type: textarea
     attributes:
