--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,10 +17,7 @@ packages = [
 [tool.poetry.dependencies]
 python = ">=3.11, <4.0"
 adalflow = { path = "adalflow", develop = true }
-# torch = "^2.3.1"
 openai = "^1.34.0"
-# lightrag = {path = "lightrag/dist/lightrag-0.0.0a11-py3-none-any.whl"}
-# lightrag = "^0.0.0a13"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -56,3 +53,13 @@ colorama = "^0.4.6"
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+
+# for formatting and linting
+[tool.black]
+line-length = 88
+target-version = ["py311"]
+
+[tool.ruff]
+extend-ignore = ["E402"] # Ignore module-level import issues
+line-length = 88
