--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -14,6 +14,7 @@ repos:
     hooks:
       - id: black
         args: ['--line-length=88']
+        exclude: ^docs/|.*\.(json|yaml|md|txt)$
 
   - repo: https://github.com/astral-sh/ruff-pre-commit
     rev: v0.4.2
@@ -21,6 +22,7 @@ repos:
       # Run the linter.
       - id: ruff
         args: ['--fix', '--extend-ignore=E402']
+        exclude: ^docs/|.*\.(json|yaml|md|txt)$
   # - repo: https://github.com/pycqa/flake8
   #   rev: 4.0.1
   #   hooks:
