--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -16,13 +16,22 @@ repos:
         args: ['--line-length=88']
         exclude: ^docs/|.*\.(json|yaml|md|txt)$
 
-  - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.4.2
+  # - repo: https://github.com/astral-sh/ruff-pre-commit
+  #   rev: v0.4.2
+  #   hooks:
+  #     # Run the linter.
+  #     - id: ruff
+  #       args: ['--fix']
+  #       exclude: ^docs/|.*\.(json|yaml|md|txt)$
+
+  # Add local hooks to run custom commands
+  - repo: local
     hooks:
-      # Run the linter.
-      - id: ruff
-        args: ['--fix', '--extend-ignore=E402']
-        exclude: ^docs/|.*\.(json|yaml|md|txt)$
+      - id: run-make-format
+        name: Run Make Format
+        entry: make format
+        language: system
+        pass_filenames: false
   # - repo: https://github.com/pycqa/flake8
   #   rev: 4.0.1
   #   hooks:
