use the ignore setting in the project toml instead of the precommit config directly, combine with makefile

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -16,6 +16,14 @@ repos:
         args: ['--line-length=88']
         exclude: ^docs/|.*\.(json|yaml|md|txt)$
 
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    rev: v0.4.2
+    hooks:
+      # Run the linter.
+      - id: ruff
+        args: ['--fix']
+        exclude: ^docs/|.*\.(json|yaml|md|txt)$
+
   # Add local hooks to run custom commands
   - repo: local
     hooks:
